--- a/roles/keepalived/templates/notify.sh.j2
+++ b/roles/keepalived/templates/notify.sh.j2
@@ -4,7 +4,7 @@ TYPE=$1
 NAME=$2
 STATE=$3
 case $STATE in
-        "MASTER") /usr/sbin/service dnsmasq stop
+        "MASTER") /usr/sbin/service dnsmasq start
                   ;;
         "BACKUP") /usr/sbin/service dnsmasq stop
                   ;;
